--- a/Resources/Prototypes/Imperial/Spider_Queen/Spider_Queen.yml
+++ b/Resources/Prototypes/Imperial/Spider_Queen/Spider_Queen.yml
@@ -5,7 +5,7 @@
   components:
   - type: StationEvent
     startDelay: 10
-    earliestStart: 30
+    earliestStart: 15
     minimumPlayers: 35
     weight: 5
     duration: 50
@@ -24,6 +24,10 @@
     name: spider-roy-name
     description: spider-roy-desc
     rules: spider-roy-desc
+    requirements:
+      - !type:DepartmentTimeRequirement
+        department: Security
+        time: 600    
     raffle:
       settings: default        
   - type: GhostRoleMobSpawner
@@ -61,7 +65,7 @@
       0: Alive
       300: Dead
   - type: Stamina
-    excess: 150
+    critThreshold: 150
   - type: DamageStateVisuals
     states:
       Alive:
@@ -131,19 +135,14 @@
     tags:
       - CannotSuicide
       - DoorBumpOpener
-  - type: Tool # Open door from xeno.yml.
-    speed: 1.5
+  - type: Tool
     qualities:
       - Prying
-    useSound:
-      path: /Audio/Items/crowbar.ogg
+    useSound: /Audio/Items/jaws_pry.ogg
   - type: Prying
-    pryPowered: !type:Bool
-        true
-    force: !type:Bool
-      true
-    useSound:
-      path: /Audio/Items/crowbar.ogg
+    speedModifier: 1.5
+    pryPowered: true
+    useSound: /Audio/Items/jaws_pry.ogg
   - type: Barotrauma #Damage
     damage:
       types:
@@ -228,7 +227,7 @@
       - FullAuto
     soundGunshot: /Audio/Weapons/Xeno/alien_spitacid.ogg  
   - type: MovementSpeedModifier 
-    baseWalkSpeed : 4
+    baseWalkSpeed : 3.5
     baseSprintSpeed : 4
   - type: LizardAccent    
 
@@ -252,7 +251,7 @@
       0: Alive
       85: Dead   #HP
   - type: Stamina
-    excess: 150
+    critThreshold: 150
   - type: DamageStateVisuals
     states:
       Alive:
@@ -295,10 +294,8 @@
   - type: Spider
     webPrototype: SpiderWebAbility
   - type: MovementSpeedModifier
-    baseWalkSpeed : 3.9
-    baseSprintSpeed : 3.9
-  - type: ReplacementAccent
-    accent: xeno   
+    baseWalkSpeed : 3
+    baseSprintSpeed : 3.9 
 
 - type: entity
   name: spider hunt
@@ -320,7 +317,7 @@
       0: Alive
       110: Dead   
   - type: Stamina
-    excess: 150
+    critThreshold: 150
   - type: DamageStateVisuals
     states:
       Alive:
@@ -358,13 +355,11 @@
   - type: Spider
     webPrototype: SpiderWebAbility
   - type: MovementSpeedModifier
-    baseWalkSpeed : 3.9
+    baseWalkSpeed : 3
     baseSprintSpeed : 3.9
   - type: AutoImplant
     implants:
     - LightImplantSpiderSpiderHunter
-  - type: ReplacementAccent
-    accent: xeno
     
 - type: entity
   name: spider ghost
@@ -386,7 +381,7 @@
       0: Alive
       100: Dead   
   - type: Stamina
-    excess: 150
+    critThreshold: 150
   - type: DamageStateVisuals
     states:
       Alive:
@@ -440,13 +435,11 @@
       - FullAuto
     soundGunshot: /Audio/Weapons/Xeno/alien_spitacid.ogg  
   - type: MovementSpeedModifier
-    baseWalkSpeed : 3.9
+    baseWalkSpeed : 1.5
     baseSprintSpeed : 3.9
   - type: AutoImplant
     implants:
     - LightImplantSpiderSpiderHunter
-  - type: ReplacementAccent
-    accent: xeno
     
 - type: entity
   name: spider shooter
@@ -468,7 +461,7 @@
       0: Alive
       80: Dead   
   - type: Stamina
-    excess: 150
+    critThreshold: 150
   - type: DamageStateVisuals
     states:
       Alive:
@@ -521,10 +514,8 @@
     implants:
     - LightImplantSpiderSpiderClown
   - type: MovementSpeedModifier
-    baseWalkSpeed : 3.7
+    baseWalkSpeed : 3
     baseSprintSpeed : 3.7
-  - type: ReplacementAccent
-    accent: xeno
 
 - type: entity
   id: PoisonousAcid 
@@ -560,9 +551,9 @@
   - type: MobThresholds
     thresholds:
       0: Alive
-      10: Dead   
+      15: Dead   
   - type: Stamina
-    excess: 150
+    critThreshold: 150
   - type: DamageStateVisuals
     states:
       Alive:
@@ -572,7 +563,7 @@
   - type: PassiveDamage 
     allowedStates:
     - Alive
-    damageCap: 10
+    damageCap: 15
     damage:
       types:
         Heat: -0.5
@@ -589,7 +580,7 @@
     animation: WeaponArcBite
     damage:
       types:
-        Piercing: 2 
+        Piercing: 5
   - type: SolutionContainerManager 
     solutions:
       melee:
@@ -599,10 +590,8 @@
   - type: TimedDespawn 
     lifetime: 20
   - type: MovementSpeedModifier
-    baseWalkSpeed : 4
-    baseSprintSpeed : 4
-  - type: ReplacementAccent
-    accent: xeno
+    baseWalkSpeed : 3.5
+    baseSprintSpeed : 4.5
     
 #Implants
 - type: entity
@@ -823,10 +812,34 @@
       state: crystal_grey
     event: !type:WorldSpawnSpellEvent
       prototypes:
-      - id: CrystalBlue
+      - id: ShardCrystalBlueXeno
         amount: 1
       offset: 0, 1
       speech: action-speech-spell-spider
+      
+- type: entity
+  id: ShardCrystalBlueXeno 
+  parent: ShardCrystalBlue
+  name: spider-spawn-crystal
+  description: spider-spawn-crystal-desc
+  noSpawn: true
+  components:  
+  - type: Destructible
+    thresholds:
+    - trigger:
+        !type:DamageTrigger
+        damage: 5
+      behaviors:
+      - !type:DoActsBehavior
+        acts: [ "Destruction" ]
+      - !type:SpawnEntitiesBehavior
+        spawn:
+          MaterialWebSilk:
+            min: 0
+            max: 0
+      - !type:PlaySoundBehavior
+        sound:
+          collection: WoodDestroy  
 
 - type: entity
   id: ActionSpawnMagicarpSpellSpiderLittle 
@@ -856,7 +869,6 @@
   - type: WorldTargetAction
     useDelay: 8 
     range: 1.5
-    hungerCost: 15 
     itemIconStyle: BigAction
     icon:
       sprite: Structures/Walls/web.rsi
@@ -866,11 +878,9 @@
       useDelay: 25
       prototypes:
       - id: FloorTileItemWebSpiders
-        doAfter: 5
         amount: 1
         useDelay: 25
       offset: 0, 1
-      doAfter: 5
       speech: action-speech-spell-spider
 
 - type: entity
@@ -881,21 +891,15 @@
   - type: WorldTargetAction
     useDelay: 10 
     range: 1.5
-    hungerCost: 15 
     itemIconStyle: BigAction
     icon:
       sprite: Structures/Walls/web.rsi
       state: full
-      useDelay: 30
     event: !type:WorldSpawnSpellEvent
-      useDelay: 25
       prototypes:
       - id: FloorTileItemWebSpiders2
-        doAfter: 5
         amount: 1
-        useDelay: 25
       offset: 0, 1
-      doAfter: 5
       speech: action-speech-spell-spider
 
 - type: entity
@@ -905,7 +909,7 @@
   noSpawn: true
   components:
   - type: WorldTargetAction
-    useDelay: 5 #КД
+    useDelay: 2 #КД
     range: 1.5
     itemIconStyle: BigAction
     icon:
@@ -925,7 +929,7 @@
   noSpawn: true
   components:
   - type: WorldTargetAction
-    useDelay: 20
+    useDelay: 6
     range: 1.5
     itemIconStyle: BigAction
     icon:
@@ -945,7 +949,7 @@
   noSpawn: true
   components:
   - type: WorldTargetAction
-    useDelay: 6 #КД
+    useDelay: 4 #КД
     range: 1.5
     itemIconStyle: BigAction
     icon:
@@ -1098,7 +1102,7 @@
     tags:
     - Egg
     - Trash
-  
+       
 #Web
 - type: entity
   id: SpiderWebUsual 
@@ -1148,7 +1152,7 @@
       thresholds:
       - trigger:
           !type:DamageTrigger
-          damage: 10
+          damage: 30
         behaviors:
         - !type:DoActsBehavior
           acts: [ "Destruction" ]
@@ -1169,8 +1173,8 @@
         Extinguish: [Touch]
     - type: SpiderWebObject
     - type: SpeedModifierContacts
-      walkSpeedModifier: 0.3
-      sprintSpeedModifier: 0.3
+      walkSpeedModifier: 0.25
+      sprintSpeedModifier: 0.25
       ignoreWhitelist:
         components:
             - IgnoreSpiderWeb
@@ -1186,9 +1190,17 @@
     snap:
       - Wall
   components:
+    - type: Destructible
+      thresholds:
+      - trigger:
+          !type:DamageTrigger
+          damage: 50
+        behaviors:
+        - !type:DoActsBehavior
+          acts: [ "Destruction" ]  
     - type: SpeedModifierContacts
-      walkSpeedModifier: 0.2
-      sprintSpeedModifier: 0.2
+      walkSpeedModifier: 0.15
+      sprintSpeedModifier: 0.15
       ignoreWhitelist:
         components:
             - IgnoreSpiderWeb
@@ -1208,8 +1220,8 @@
     - type: TimedDespawn
       lifetime: 13
     - type: SpeedModifierContacts
-      walkSpeedModifier: 0.15
-      sprintSpeedModifier: 0.15
+      walkSpeedModifier: 0.1
+      sprintSpeedModifier: 0.1
       ignoreWhitelist:
         components:
             - IgnoreSpiderWeb
@@ -1294,7 +1306,7 @@
   - type: MovedByPressure
   - type: EmitSoundOnCollide
     sound:
-      path: /Audio/Effects/wall_bonk.ogg
+      path: /Audio/Effects/drop.ogg
   - type: EmitSoundOnLand
     sound:
       path: /Audio/Effects/drop.ogg
@@ -1414,7 +1426,7 @@
   name: web
   description: web
   components:
-  - type: Clickable
+  - type: Clickable 
   - type: MeleeSound
     soundGroups:
       Brute:
@@ -1452,4 +1464,4 @@
     base: wall
   - type: Construction
     graph: WebStructures
-    node: wall
+    node: wall 
