--- a/Resources/Prototypes/Imperial/ImperialClothes/ImperialCloak.yml
+++ b/Resources/Prototypes/Imperial/ImperialClothes/ImperialCloak.yml
@@ -15,6 +15,8 @@
   components:
   - type: Sprite
     sprite: Imperial/ImperialClothes/hoscloakformal.rsi
+  - type: StealTarget
+    stealGroup: HeadCloak
 
 - type: entity
   parent: ClothingNeckBase
