Фикс набора связиста вора (#378)
* Фикс отображения  настенных генераторов в консоли

* Фикс контента в тулбоксе вора

--- a/Resources/Prototypes/Catalog/thief_toolbox_sets.yml
+++ b/Resources/Prototypes/Catalog/thief_toolbox_sets.yml
@@ -91,6 +91,7 @@
   - CyberPen
   - BriefcaseThiefBribingBundleFilled
   - ClothingMaskGasVoiceChameleon
+  - HandheldCrewMonitor
   #- todo Chameleon Stamp
 
 - type: thiefBackpackSet
