--- a/Resources/Prototypes/Imperial/DeadSector/head.yml
+++ b/Resources/Prototypes/Imperial/DeadSector/head.yml
@@ -15,9 +15,9 @@
         Piercing: 0.97
         Heat: 0.95
   - type: Sprite
-    sprite: Clothing/Head/Helmets/security.rsi
+    sprite: Imperial/DeadSector/head/AssaultACH.rsi
   - type: Clothing
-    sprite: Clothing/Head/Helmets/security.rsi
+    sprite: Imperial/DeadSector/head/AssaultACH.rsi
 
 - type: entity
   parent: ClothingHeadHelmetBasic
@@ -36,9 +36,9 @@
         Piercing: 0.97
         Heat: 0.95
   - type: Sprite
-    sprite: Clothing/Head/Helmets/security.rsi
+    sprite: Imperial/DeadSector/head/AssaultACHUN.rsi
   - type: Clothing
-    sprite: Clothing/Head/Helmets/security.rsi
+    sprite: Imperial/DeadSector/head/AssaultACHUN.rsi
 
 - type: entity
   parent: ClothingHeadHelmetBasic
@@ -57,9 +57,9 @@
         Piercing: 0.97
         Heat: 0.95
   - type: Sprite
-    sprite: Clothing/Head/Helmets/security.rsi
+    sprite: Imperial/DeadSector/head/AssaultACHML.rsi
   - type: Clothing
-    sprite: Clothing/Head/Helmets/security.rsi
+    sprite: Imperial/DeadSector/head/AssaultACHML.rsi
 
 - type: entity
   parent: ClothingHeadHelmetBasic
@@ -89,9 +89,9 @@
         Piercing: 0.97
         Heat: 0.95
   - type: Sprite
-    sprite: Clothing/Head/Helmets/security.rsi
+    sprite: Imperial/DeadSector/head/AirCVC.rsi
   - type: Clothing
-    sprite: Clothing/Head/Helmets/security.rsi
+    sprite: Imperial/DeadSector/head/AirCVC.rsi
 
 - type: entity
   parent: ClothingHeadBase
@@ -164,9 +164,9 @@
         Piercing: 0.90
         Heat: 0.90
   - type: Sprite
-    sprite: Clothing/Head/Helmets/security.rsi
+    sprite: Imperial/DeadSector/head/AssaultHelmetAltyn.rsi
   - type: Clothing
-    sprite: Clothing/Head/Helmets/security.rsi
+    sprite: Imperial/DeadSector/head/AssaultHelmetAltyn.rsi
 
 - type: entity
   parent: ClothingHeadBase
@@ -309,3 +309,137 @@
     sprite: Imperial/DeadSector/head/CamouflageRobeHood.rsi
   - type: Clothing
     sprite: Imperial/DeadSector/head/CamouflageRobeHood.rsi
+
+- type: entity
+  parent: ClothingHeadEVAHelmetBase
+  id: ClothingHeadHelmetHardsuitShadow
+  name: spacesuit of division Shadow helmet
+  description: null
+  components:
+  - type: Sprite
+    sprite: Imperial/DeadSector/head/ClothingHeadHelmetHardsuitShadow.rsi
+    layers:
+    - state: icon
+    - state: light-icon
+      shader: unshaded
+      visible: false
+      map: [ "light" ]
+  - type: Clothing
+    equippedPrefix: off
+  - type: PointLight
+    enabled: false
+    mask: /Textures/Effects/LightMasks/cone.png
+    autoRot: true
+    radius: 7
+    netsync: false
+  - type: Appearance
+  - type: HandheldLight
+    addPrefix: false
+    blinkingBehaviourId: blinking
+    radiatingBehaviourId: radiating
+  - type: LightBehaviour
+    behaviours:
+      - !type:FadeBehaviour
+        id: radiating
+        interpolate: Linear
+        maxDuration: 2.0
+        startValue: 3.0
+        endValue: 2.0
+        isLooped: true
+        reverseWhenFinished: true
+      - !type:PulseBehaviour
+        id: blinking
+        interpolate: Nearest
+        maxDuration: 1.0
+        minValue: 0.1
+        maxValue: 2.0
+        isLooped: true
+  - type: ToggleableLightVisuals
+    spriteLayer: light
+    inhandVisuals:
+      left:
+      - state: on-inhand-left
+      right:
+      - state: on-inhand-right
+    clothingVisuals:
+      head:
+      - state: on-equipped-HELMET
+  - type: PowerCellSlot
+    cellSlotId: cell_slot
+  - type: ItemSlots
+    slots:
+      cell_slot:
+        name: power-cell-slot-component-slot-name-default
+        startingItem: PowerCellMedium
+  - type: Item
+    heldPrefix: off
+  - type: ContainerContainer
+    containers:
+      cell_slot: !type:ContainerSlot
+
+- type: entity
+  parent: ClothingHeadEVAHelmetBase
+  id: ClothingHeadHelmetHardsuitBZSKMkI
+  name: spacesuit BZSK Mk I
+  description: null
+  components:
+  - type: Sprite
+    sprite: Imperial/DeadSector/head/ClothingHeadHelmetHardsuitBZSKMkI.rsi
+    layers:
+    - state: icon
+    - state: light-icon
+      shader: unshaded
+      visible: false
+      map: [ "light" ]
+  - type: Clothing
+    equippedPrefix: off
+  - type: PointLight
+    enabled: false
+    mask: /Textures/Effects/LightMasks/cone.png
+    autoRot: true
+    radius: 7
+    netsync: false
+  - type: Appearance
+  - type: HandheldLight
+    addPrefix: false
+    blinkingBehaviourId: blinking
+    radiatingBehaviourId: radiating
+  - type: LightBehaviour
+    behaviours:
+      - !type:FadeBehaviour
+        id: radiating
+        interpolate: Linear
+        maxDuration: 2.0
+        startValue: 3.0
+        endValue: 2.0
+        isLooped: true
+        reverseWhenFinished: true
+      - !type:PulseBehaviour
+        id: blinking
+        interpolate: Nearest
+        maxDuration: 1.0
+        minValue: 0.1
+        maxValue: 2.0
+        isLooped: true
+  - type: ToggleableLightVisuals
+    spriteLayer: light
+    inhandVisuals:
+      left:
+      - state: on-inhand-left
+      right:
+      - state: on-inhand-right
+    clothingVisuals:
+      head:
+      - state: on-equipped-HELMET
+  - type: PowerCellSlot
+    cellSlotId: cell_slot
+  - type: ItemSlots
+    slots:
+      cell_slot:
+        name: power-cell-slot-component-slot-name-default
+        startingItem: PowerCellMedium
+  - type: Item
+    heldPrefix: off
+  - type: ContainerContainer
+    containers:
+      cell_slot: !type:ContainerSlot
